objects/ZPF_UIP_Element__c.object
<CustomObject><fields>
        <fullName>Academic_Achievement_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Achievement (Status)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Growth_Gaps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Growth Gaps</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Growth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Growth</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Challenge_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Challenge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Challenge 1)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3Ea</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Challenge_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 2</label>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Challenge 2)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3Ek</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Challenge_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 3</label>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Challenge 3)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3Eu</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Colorado_Graduation_Pathways_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Colorado Graduation Pathways Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Diagnostic_Review_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Review Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Evidence_Based_Interventions__c</fullName>
        <label>Evidence Based Interventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Gifted_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gifted Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Major Improvement Strategy 1)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3EQ</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Major Improvement Strategy 2)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3E6</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Major Improvement Strategy 3)</relationshipLabel>
        <relationshipName>ZPF_UIP_ElementsX3Dw</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Other_Description__c</fullName>
        <label>Other (Description)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Postsecondary_Workforce_Readiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postsecondary &amp; Workforce Readiness</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Root_Cause_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements</relationshipLabel>
        <relationshipName>ZPF_UIP_Elements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Root Cause 2)</relationshipLabel>
        <relationshipName>ZPF_UIP_Elements2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ZPF_UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ZPF_UIP_Element__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements (Root Cause 3)</relationshipLabel>
        <relationshipName>ZPF_UIP_Elements3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>School_Improvement_Support_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Improvement Support Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>State_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Accreditation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Graduation_and_Completion_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Graduation and Completion Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Tiered_Intervention_Grant_TIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tiered Intervention Grant (TIG)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IIA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_III__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title III</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_I_Focus_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I Focus School</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZPIF UIP</label>
        <referenceTo>ZPIF_UIP__c</referenceTo>
        <relationshipLabel>ZPF UIP Elements</relationshipLabel>
        <relationshipName>ZPF_UIP_Elements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>ZPF UIP Element</label><nameField>
        <label>ZPF UIP Element Name</label>
        <type>Text</type>
    </nameField><pluralLabel>ZPF UIP Elements</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UIP__c</columns>
        <columns>ZPIF_UIP_Identidier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Challenge</fullName>
        <active>true</active>
        <description>Priority Performance Challenge</description>
        <label>Challenge</label>
    </recordTypes><recordTypes>
        <fullName>Major_Improvement_Strategy</fullName>
        <active>true</active>
        <label>Major Improvement Strategy</label>
    </recordTypes><recordTypes>
        <fullName>Root_Cause</fullName>
        <active>true</active>
        <label>Root Cause</label>
    </recordTypes></CustomObject>